# pinn4mpc

./: .gitignore  README.md  main.py  pinn_mpc_demo.ipynb  pyproject.toml  run_demo.py
src/mpc/: controller.py  pi_controller.py
src/physics/: inverter.py  simulation.py
src/pinn/: loss.py  model.py  trainer.py
tests/: test_physics.py
